--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,6 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build (electron build), postinstall web test
       run: |
+        cd mailx
         npm install
         npm run build:prod
         npm run test
