--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,10 +17,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build (electron build), postinstall web test
-      run: |
-        cd mailx
-        npm install
-        npm run build:prod
-      env:
-        CI: true
+    - name: Install dependencies
+      run: npm install
+    - name: Lint
+      run: npm run lint
+    - name: Build
+      run: npm run build:prod
+    - name: Test
+      run: ng test --configuration=ci
