--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,4 +28,4 @@ jobs:
       run: npm run build:prod
     - name: Test
       working-directory: ./mailx
-      run: ng test --configuration=ci
+      run: npm run test:ci
