--- a/mailx/package.json
+++ b/mailx/package.json
@@ -36,7 +36,8 @@
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run build:prod && mocha --timeout 300000 --require ts-node/register e2e/**/*.spec.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "test:ci": "ng test --configuration=ci"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.802.2",
