--- a/mailx/package.json
+++ b/mailx/package.json
@@ -84,5 +84,9 @@
   },
   "engines": {
     "node": ">=10.9.0"
+  },
+  "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.19.0"
   }
 }
