--- a/mailx/package.json
+++ b/mailx/package.json
@@ -87,6 +87,7 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
+    "@angular/http": "^7.2.15",
     "@types/axios": "^0.14.0",
     "axios": "^0.19.0"
   }
