--- a/api/src/swagger/auth/register.yml
+++ b/api/src/swagger/auth/register.yml
@@ -22,9 +22,10 @@ responses:
     description: The user was successfully created
     schema:
       example:
-        user:
-          username: foobar
-          email: foo@bar.com
+        data:
+          user:
+            username: foobar
+            email: foo@bar.com
           token: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJwZXJzb25hbF9zZWNyZXQiOiJ6ZHNiR1FGamRIRlU0a1NmIn0.4fEm4v3kM1mFc_UG5ONCG2IsNxt3hZzfcIb4ixGG-ZU
   422:
     description: A user with the requested username already exists
